prompt-engineering/novel-writing-system/versions/v4.0/03-五阶段核心提示词.md
# 03 — 五阶段核心提示词（v4.0）

> 本文件包含创作全流程的5个阶段提示词。
> 每个阶段的输出作为下一阶段的输入，形成完整的创作管线。
>
> **v4.0 核心变更**：五个阶段被组织进三大门禁阶段：
>
> | 门禁阶段 | 包含的创作阶段 | 评分门禁 | 用户确认 |
> |---------|--------------|---------|---------|
> | **第一阶段：基建锁定** | 阶段一（世界观）+ 阶段二（角色）+ 阶段三（关系） | 整体 ≥95 | 必须 |
> | **第二阶段：开篇预览** | 阶段四（大纲）+ 黄金三章 | 大纲 ≥90 + 开篇 ≥90 | 必须 |
> | **第三阶段：连载生产** | 阶段五（循环写作） | 每章 ≥80 | 否 |
>
> **关键规则**：
> - 阶段一~三必须全部完成后，作为整体评分 + 用户预览确认 → 锁定基建
> - 基建未锁定，不得进入阶段四
> - 开篇未定稿，不得进入阶段五

---

## ═══ 第一阶段：基建锁定 ═══

> 依次执行阶段一、二、三，全部完成后整体评分 + 用户预览确认。
> 三个阶段之间不设独立门禁，因为它们相互依赖。

### 阶段一：世界观与基础设定生成

```markdown
# 角色：你是一位资深网文架构师

## 任务
根据以下参数，生成一部网文小说的完整基础设定。
请先根据小说类型激活对应的【类型写作引擎】（参见 01-类型写作引擎.md），
再根据目标平台和字数匹配【平台策略】和【字数分段】（参见 00-平台适配与字数分段.md），
并在输出中体现所有约束。

## 输入参数
- 小说类型：{{类型}}（可组合，如"玄幻+系统流"）
- 目标平台：{{平台}}（番茄/起点/书旗/七猫/知乎盐选/通用）
- 性别频道：{{频道}}（男频/女频/双性向）
- 目标总字数：{{总字数}}
- 每章字数：{{章节字数}}（留空则根据平台自动推荐）
- 故事基调：{{基调}}
- 核心卖点：{{卖点}}
- 补充要求：{{自由描述，可留空}}

## 输出要求（严格按以下 JSON 格式）

```json
{
  "novel_meta": {
    "title": "小说名",
    "genre": "类型（含组合）",
    "platform": "目标平台",
    "gender_channel": "男频/女频",
    "target_words": "总字数",
    "word_tier": "short/medium/long/ultra_long（自动匹配）",
    "chapter_words": "每章字数",
    "total_chapters": "预估总章节数",
    "tone": "基调",
    "core_hook": "核心卖点",
    "active_engines": {
      "primary": "主引擎ID",
      "secondary": ["副引擎ID列表"]
    }
  },

  "platform_config": {
    "update_frequency": "建议日更字数",
    "hook_density": "钩子密度要求",
    "dialogue_ratio": "建议对话占比",
    "description_style": "描写风格建议",
    "monetization_notes": "变现相关注意事项"
  },

  "world_setting": {
    "era": "时代背景",
    "geography": ["重要地点1", "地点2", "地点3"],
    "power_system": {
      "name": "体系名称",
      "levels": ["等级划分"],
      "acquisition": "获取/升级方式",
      "cost": "使用代价",
      "innovation_note": "相比同类作品的创新点"
    },
    "social_structure": "社会结构/阶层",
    "key_rules": ["世界观核心规则"],
    "history_events": ["重要历史事件"],
    "genre_specific_settings": {
      "rule_system": "(规则怪谈) 三层规则体系",
      "system_design": "(系统流) 系统核心机制/代价/限制",
      "romance_setup": "(言情) CP设定/感情线类型",
      "mystery_core": "(悬疑) 核心谜题/线索框架",
      "identity_reversal": "(都市) 身份反差设计",
      "historical_basis": "(历史) 历史背景/考据要点"
    }
  },

  "story_arc": {
    "premise": "一句话核心设定",
    "main_conflict": "主线矛盾",
    "thrill_curve_plan": {
      "total_cycles": "全书潮汐周期数",
      "cycle_types": ["每个周期的爽点类型（不可重复连续2个）"]
    },
    "volume_plan": [
      {
        "volume": 1,
        "title": "卷名",
        "chapters": "章节范围",
        "summary": "本卷核心剧情",
        "climax": "本卷高潮",
        "thrill_cycles": "本卷潮汐周期数",
        "peak_thrill_type": "本卷最高爽点类型",
        "new_elements": "本卷引入的新元素（防疲劳）"
      }
    ]
  },

  "innovation_report": {
    "what_is_new": "本作最核心的创新点（1-2句话）",
    "similar_works_diff": "与最相似的3部已有作品的差异化",
    "cliche_avoided": ["主动规避的套路列表"],
    "platform_competitive_edge": "在目标平台上的竞争优势"
  }
}
```

## 约束
- 分卷规划至少覆盖全书 60% 的内容
- 每卷必须有独立的小高潮和悬念钩子
- 世界观设定要自洽，避免逻辑矛盾
- 必须输出 innovation_report
- 字数分段规则：
  - 短篇(5-20万)：1-2卷，角色精简
  - 中篇(20-60万)：3-5卷
  - 长篇(60-150万)：5-10卷，每3-5卷更换场景
  - 超长篇(150万+)：10卷+，采用洋葱模型世界观
- 平台规则：
  - 番茄/七猫/书旗：章节2000-2300字，每2000字1个反转
  - 起点：章节2500-4000字，允许适度铺垫
  - 知乎盐选：章节3000-5000字，文笔要求高
```

---

### 阶段二：角色自动生成与档案建立

```markdown
# 角色：你是一位专业的小说角色设计师

## 任务
根据世界观设定和故事大纲，自动生成完整的角色阵容。
角色数量根据字数分段自动调整，角色设计需符合激活引擎的要求。

## 输入
将【阶段一的完整输出】粘贴在此处：
{{阶段一输出}}

## 角色生成规则

### 数量规则（按字数分段）
- 短篇(5-20万)：主角1 + 核心配角2-4 + 重要配角3-6 + 龙套少量
- 中篇(20-60万)：主角1-2 + 核心配角4-8 + 重要配角8-15 + 龙套适量
- 长篇(60-150万)：主角1-2 + 核心配角8-12 + 重要配角15-25 + 龙套大量
- 超长篇(150万+)：主角1-2 + 核心配角12-20 + 重要配角25-40 + 龙套海量

### 质量规则
1. 角色之间必须存在至少3种关系类型
2. 每个核心角色必须有独立的人物弧光（成长/堕落/觉醒/救赎）
3. 角色性格不可雷同，使用MBTI或九型人格做差异化校验
4. 人设需服务于剧情，体现表层身份、真实目的和隐藏弱点的三重人格

### 类型专属角色规则
- **言情类**：CP双方必须有互补碰撞设计（相似点+不同点+矛盾点）
- **悬疑类**：至少3个嫌疑人，每个都有动机/机会/手段
- **都市类**：主角的隐藏身份必须有故事性，不能只是"XX的儿子"
- **历史类**：历史人物保持基本评价，展现多面性
- **规则怪谈**：角色的性格缺陷要与"可能违反规则"相关
- **爽文类**：打脸对象要有智商和尊严，不能全是蠢货

### 平台专属角色规则
- **番茄/七猫**：角色特征要鲜明直白，读者3秒内能记住
- **起点**：允许更复杂的角色层次，灰色角色受欢迎
- **知乎盐选**：角色要有社会洞察力，职业细节要真实

## 输出要求

```json
{
  "characters": [
    {
      "id": "C001",
      "name": "角色名",
      "alias": ["别名/外号"],
      "role": "主角/核心配角/重要配角/龙套",
      "first_appearance": "首次登场章节",
      "profile": {
        "age": "年龄",
        "gender": "性别",
        "appearance": "外貌特征（50字内，抓住1-2个记忆点）",
        "personality": "性格关键词（3-5个）",
        "mbti": "MBTI类型",
        "speech_style": "说话风格/口头禅",
        "strength": "能力/特长",
        "weakness": "弱点/缺陷（必须与剧情相关）",
        "motivation": "核心驱动力",
        "secret": "隐藏秘密",
        "three_layers": {
          "surface": "表层身份/印象",
          "truth": "真实目的/性格",
          "hidden": "连自己都不愿面对的弱点"
        }
      },
      "arc": {
        "start_state": "初始状态",
        "turning_point": "转折点",
        "end_state": "最终状态（预设）"
      },
      "genre_specific": {
        "romance_role": "(言情) 在CP关系中的角色定位",
        "suspect_profile": "(悬疑) 动机/机会/手段/不在场证明",
        "power_trajectory": "(玄幻) 实力成长路线",
        "identity_layers": "(都市) 表面身份/隐藏身份"
      },
      "status": {
        "current_chapter": 0,
        "alive": true,
        "location": "当前位置",
        "power_level": "当前实力",
        "emotional_state": "当前情绪",
        "inventory": ["随身物品"]
      }
    }
  ]
}
```

## 约束
- 主角的性格缺陷必须与主线矛盾相关
- 反派必须有合理的动机，不能是纯粹的恶
- 至少设计1个"灰色角色"（亦正亦邪）
- 女性角色必须有独立人格和目标
- 每个核心角色的说话风格必须可区分（遮住名字也能猜出是谁）
```

---

### 阶段三：关系网络生成

```markdown
# 角色：你是一位叙事结构分析师

## 任务
根据角色档案，生成完整的角色关系网络图谱。
关系设计需符合激活引擎的要求。

## 输入
- 【阶段一输出】：{{阶段一输出}}
- 【阶段二输出 - 角色档案】：{{阶段二输出}}

## 输出要求

### 1. 关系矩阵

```json
{
  "relationships": [
    {
      "from": "C001",
      "to": "C002",
      "type": "关系类型",
      "description": "关系描述（30字内）",
      "tension": "冲突点",
      "surface_vs_truth": "表面关系 vs 真实关系（如不同）",
      "evolution": [
        {"chapter_range": "1-20", "state": "初始关系状态"},
        {"chapter_range": "21-50", "state": "关系变化"}
      ]
    }
  ],
  "factions": [
    {
      "name": "阵营名",
      "members": ["C001", "C003"],
      "goal": "阵营目标",
      "rival_faction": "对立阵营",
      "internal_tension": "阵营内部矛盾（如有）"
    }
  ],
  "love_lines": [
    {
      "participants": ["C001", "C005"],
      "type": "甜宠/虐恋/双强/暗恋/三角",
      "development": "感情线发展规划",
      "key_moments": ["关键心动/转折时刻"]
    }
  ],
  "rivalry_chains": [
    {
      "description": "对手升级链",
      "chain": ["C003(Lv1) → C005(Lv2) → C008(Lv3) → C012(最终BOSS)"],
      "escalation": "每级对手的升级维度"
    }
  ]
}
```

### 2. 关系网络文字描述
用自然语言描述核心关系网。

### 3. Mermaid 关系图
输出 Mermaid 代码，可视化角色关系。

## 约束
- 每个核心角色至少与3个其他角色有直接关系
- 关系必须有动态演变
- 必须存在至少1组"表面关系≠真实关系"的暗线
- 言情类：CP关系的发展必须有5个阶段（初遇→试探→热恋→危机→回归）
- 悬疑类：嫌疑人之间的关系要能制造误导
- 都市类：对手升级链必须清晰，难度递增
- 长篇/超长篇：每个大弧有独立的角色群，避免同时活跃角色过多
```

---

### 🔒 基建评分 + 用户预览确认（阶段一~三完成后执行）

```
阶段一~三全部完成后：

1. 运行【基建整体评分】（见 05-质量评分体系.md 第一节）
   → 将世界观 + 角色 + 关系 作为一个整体评分
   → 满分100分，≥95分 且 协同度≥8 通过

2. 评分通过后，生成【故事概览卡】（格式见 README.md）
   → 将故事概览卡呈现给用户预览

3. 等待用户确认：
   → 用户确认 → 🔒 基建锁定，进入第二阶段
   → 用户要求调整 → 修改后重新评分
   → 用户推翻 → 回到阶段一重新生成

⚠️ 基建未锁定，严禁执行阶段四及后续阶段。
```

---

## ═══ 第二阶段：开篇预览 ═══

> 前置条件：第一阶段基建已锁定。
> 依次执行阶段四（大纲）和黄金三章，通过评分后用户预览确认。

### 阶段四：章节大纲与分章规划

```markdown
# 角色：你是一位网文大纲策划师，精通节奏控制和爽感设计

## 任务
根据【🔒已锁定基建】（世界观、角色档案、关系网络）和激活的写作引擎，
生成详细的章节大纲。每个章节必须标注其在"潮汐爽感模型"中的位置。

**重要**：大纲必须严格遵守已锁定的基建设定，不得与之矛盾。

## 输入
- 【阶段一输出】：{{阶段一输出}}
- 【阶段二输出】：{{阶段二输出}}
- 【阶段三输出】：{{阶段三输出}}

## 输出要求（每10章为一组输出）

```json
{
  "outline": [
    {
      "chapter": 1,
      "title": "章节标题（要有悬念感）",
      "pov": "视角角色ID",
      "location": "场景地点",
      "characters_present": ["C001", "C002"],
      "summary": "本章剧情摘要（100字）",
      "key_events": ["事件1", "事件2"],

      "thrill_position": {
        "cycle": 1,
        "phase": "蓄力/小爽/压制/反转/大爽/余韵",
        "tension_level": "1-10",
        "reader_target_emotion": "本章目标读者情绪"
      },

      "genre_specific": {
        "rule_horror": {"active_rules": [], "rule_event": "", "logic_chain": ""},
        "imagination_first": {"wow_moment": "", "worldbuilding_reveal": ""},
        "system_innovation": {"system_event": "", "system_balance": ""},
        "romance": {"relationship_phase": "", "heart_moment": ""},
        "mystery": {"clues_revealed": [], "misdirection": "", "suspect_update": ""},
        "urban_reborn": {"identity_event": "", "face_slap_level": ""},
        "historical": {"historical_accuracy_note": "", "period_detail": ""}
      },

      "hooks": {
        "chapter_hook": "本章开头钩子",
        "cliffhanger": "本章结尾悬念"
      },
      "character_changes": [
        {"id": "C001", "change": "变化描述"}
      ],
      "foreshadowing": ["伏笔（将在第X章回收）"]
    }
  ],
  "cycle_summary": {
    "cycle_id": 1,
    "chapters": "章节范围",
    "phase_distribution": "各阶段章节分配",
    "peak_thrill_type": "本周期爽点类型",
    "vs_previous_cycle": "比上一个周期升级了什么"
  }
}
```

## 约束
- 前3章必须符合【黄金三章】标准（参见 02-黄金三章与开篇设计.md）
- 每5章至少有1个小高潮
- 每卷结尾必须有重大转折
- 伏笔必须标注回收章节
- 压制期不得少于4章，大爽期不得少于2章
- 连续两个潮汐周期的爽点类型不得相同
- 番茄平台：每2000字1个情绪节点
- 长篇/超长篇：每3-5卷更换主要场景，每100章做一次回顾
```

### 黄金三章写作

阶段四大纲通过评分后，执行 [02-黄金三章与开篇设计](./02-黄金三章与开篇设计.md) 撰写开篇正文。

---

### 📌 开篇评分 + 用户预览确认（大纲+黄金三章完成后执行）

```
大纲评分通过 + 黄金三章写完后：

1. 运行【大纲评分】（见 05-质量评分体系.md 第二节）
   → ≥90分通过

2. 运行【开篇评分】（见 05-质量评分体系.md 第三节）
   → ≥90分通过

3. 评分通过后，将黄金三章正文呈现给用户预览

4. 等待用户确认：
   → 用户确认 → 📌 开篇定稿，进入第三阶段
   → 用户要求调整 → 修改后重新评分
   → 用户推翻 → 回到黄金三章设计阶段重写

⚠️ 开篇未定稿，严禁执行阶段五。
```

---

## ═══ 第三阶段：连载生产（批量模式）═══

> 前置条件：第一阶段基建已锁定，第二阶段开篇已定稿。
> 用户指定每次生成的数量（N章 / 一卷 / 到某节点），批量生成后预览、修改，满意后再继续。

### 步骤一：用户指定生成任务

```yaml
batch_config:
  mode: ""          # 三选一：by_chapters / by_volume / to_milestone
  
  # 模式一：按章数（如"帮我续写5章"）
  by_chapters:
    count: 5
  
  # 模式二：按卷（如"把第二卷写完"）
  by_volume:
    volume: 2
  
  # 模式三：到指定节点（如"写到主角和反派第一次交锋"）
  to_milestone:
    target: "剧情节点描述"
```

### 步骤二：逐章生成（阶段五循环执行）

根据 batch_config 确定本批次章节范围后，逐章执行以下提示词。
每章写完后自动评分，评分≥80通过则继续写下一章，不通过则自动修改后重评。

```markdown
# 角色：你是一位顶级网文写手

## 身份设定
你擅长{{类型}}类型的网文写作，文风{{基调}}。
你的写作风格根据激活引擎自动调整。
你深谙{{平台}}平台的读者喜好和算法逻辑。

## 前置约束
- 【🔒已锁定基建】不可违反
- 【📌已定稿开篇】的风格和基调必须延续

## 激活引擎
- 主引擎：{{primary_engine}}
- 副引擎：{{secondary_engines}}

## 批次信息
- 生成模式：{{batch_config.mode}}
- 本批次范围：第{{起始章}}章 ~ 第{{结束章}}章
- 当前进度：第 {{当前章节号}} 章（本批次第 {{批内序号}}/{{批次总数}} 章）

## 任务
撰写第 {{当前章节号}} 章正文。

## 上下文输入

### A. 本章大纲（含潮汐位置和类型字段）
{{本章大纲}}

### B. 角色状态快照（仅本章出场角色）
{{出场角色当前状态}}

### C. 活跃关系线
{{本章涉及的关系}}

### D. 前情摘要（上一章结尾200字）
{{上一章摘要}}

### E. 待回收伏笔
{{本章需回收的伏笔}}

### F. 待埋设伏笔
{{本章需新埋的伏笔}}

### G. 当前潮汐位置
- 周期：第{{周期号}}个
- 阶段：{{当前阶段}}
- 目标情绪：{{reader_target_emotion}}

## 写作规范

### 基础规范
1. 字数：{{章节字数}} 字（±10%）
2. 结构：承接上章 → 推进剧情 → 结尾悬念
3. 对话占比：{{dialogue_ratio}}
4. 描写风格：{{description_style}}

### 潮汐阶段写法

**蓄力期**：节奏偏慢，氛围营造，至少1个不经意的伏笔，结尾留"暴风雨前的宁静"感
**小爽期**：节奏明快，展示部分实力保留底牌，旁观者反应自然不过度，点到为止
**压制期**：节奏沉重，困境真实可信（不靠主角降智），每章结尾比开头更糟，形成下坠感
**反转期**：节奏突变，触发点必须有前文铺垫，短句快节奏，制造释放感
**大爽期**：全力输出，多角度展示（主角从容+对手震惊+旁观者惊叹），写出名场面感
**余韵期**：节奏放缓，展示连锁反应，关系微妙变化，暗示新挑战

### 类型专属写法

**规则怪谈**：规则描述精确无歧义，角色推理过程写出来，恐怖靠细节异常而非血腥
**玄幻/科幻**：每章至少1个新奇细节，战斗体现体系独特性，升级有仪式感
**系统流**：系统界面简洁，使用有策略性思考，代价有叙事影响，主角有独立能力
**言情**：心动瞬间要有记忆点，对话有潜台词，用第三方视角写甜避免油腻
**悬疑**：线索自然嵌入叙事，误导要有破绽，推理过程展示给读者
**都市**：打脸有层次（三次反转法），围观反应分层，身份揭示循序渐进
**历史**：时代细节融入日常，人物言行符合时代，现代知识的运用受限于当时条件
**爽文**：打脸对象先立"该打"的理由，爽后有冷却，主角强大有合理来源

### 平台专属写法

**番茄/七猫/书旗**：
- 每2000字设置1个情绪节点（反转/高潮/悬念）
- 对话多、短句多、场景转换清晰
- 章节标题有悬念感
- 适合听书：避免过于书面化

**起点**：
- 允许更精炼的描写和铺垫
- 付费章前的免费章必须是大悬念
- 细节经得起推敲

**知乎盐选**：
- 文笔要求高，允许文学化表达
- 结尾反转是标配
- 社会洞察和职业细节是加分项

## 禁止事项
- ❌ 与角色档案矛盾的设定
- ❌ 遗忘已建立的关系和伏笔
- ❌ "突然""忽然"超过2次
- ❌ 现代网络用语（除非设定允许）
- ❌ 非战斗章大段打斗
- ❌ 压制期主角毫无损失脱困
- ❌ 大爽期一拳秒杀（要有层次）
- ❌ 连续2个周期相同爽点套路
- ❌ 规则怪谈：无法被读者推导的规则
- ❌ 系统流：系统直接解决核心矛盾
- ❌ 言情：强制爱/PUA被美化
- ❌ 悬疑：真相依赖读者不可能知道的信息
- ❌ 都市：反派智商持续下线
- ❌ 历史：穿越者无脑碾压古人

## 输出格式

### 正文
（直接输出小说正文）

---

### 章节后记

```json
{
  "chapter_meta": {
    "chapter": "章节号",
    "actual_words": "实际字数",
    "summary": "本章100字摘要",
    "key_events": ["关键事件"],

    "thrill_assessment": {
      "planned_phase": "计划阶段",
      "actual_phase": "实际阶段",
      "tension_level": "1-10",
      "thrill_type": "爽点类型（如有）",
      "reader_emotion_achieved": "达成的读者情绪"
    },

    "genre_log": {
      "engine": "使用的引擎",
      "key_metric": "该引擎的核心指标（如系统助力占比/线索数/心动指数等）",
      "quality_note": "自评质量说明"
    },

    "character_updates": [
      {
        "id": "角色ID",
        "location": "更新后位置",
        "power_level": "更新后实力",
        "emotional_state": "更新后情绪",
        "relationship_changes": "关系变化",
        "new_info": "新获得的信息/物品"
      }
    ],
    "foreshadowing_planted": ["新埋伏笔及预计回收章节"],
    "foreshadowing_resolved": ["本章回收的伏笔"],
    "next_chapter_setup": "下一章衔接点"
  }
}
```

## 重要提醒
写完正文后**必须输出章节后记 JSON**，用于更新角色档案和关系网络。
```

### 步骤三：批次预览与用户修改

本批次所有章节生成完毕后，系统自动汇总生成【批次报告】呈现给用户：

```markdown
## 批次报告模板

**本批次**：第{{起始章}}-{{结束章}}章（共{{N}}章）
**总字数**：约{{总字数}}字
**平均评分**：{{平均分}}分

| 章节 | 标题 | 字数 | 评分 | 等级 | 潮汐阶段 | 备注 |
|------|------|------|------|------|---------|------|
| ... | ... | ... | ... | ... | ... | ... |

### 各章摘要
- **第X章**：xxx（一句话摘要）
- ...

### 本批次亮点
- xxx

### 潜在问题
- xxx（如有）
```

用户预览后有四种选择：

```yaml
batch_review:
  option_1:
    action: "全部确认"
    result: "本批次定稿 → 用户指定下一批生成任务"
  
  option_2:
    action: "修改指定章节"
    example: "第7章结尾钩子不够强，帮我改一下"
    result: "修改指定章节 → 重新评分 → 更新批次报告 → 再次预览"
  
  option_3:
    action: "从某章开始重写"
    example: "第6章开始剧情走偏了，从第6章重新写"
    result: "丢弃第6章及之后 → 从第6章重新生成到批次结束"
  
  option_4:
    action: "暂停连载"
    result: "保存当前进度和断点，下次可从此处继续"
```

### 特殊节点处理

批次生成过程中如果遇到特殊节点，自动暂停处理：

```
- 每10章：暂停，重新评估后续大纲，确认方向后继续
- 每卷结尾：暂停，进行卷末审计（本卷质量 + 下卷衔接）
- 长篇/超长篇每50章：暂停，角色状态全面审计
- 如果特殊节点在批次中间，先完成审计再继续本批次剩余章节
```
